# typegen2

./: .gitignore  Cargo.toml  testscript.sh
typegen_cli/: Cargo.toml
typegen_cli/src/: main.rs
typegen_core/: Cargo.toml
typegen_core/src/: jsoninfer.rs  jsoninputerr.rs  jsonlex.rs  lib.rs  shape.rs
typegen_wasm/: Cargo.toml
typegen_wasm/src/: lib.rs
